terraform/sg.tf
resource "aws_security_group" "rain-alb-sg" {
    name = "rain-alb-sg"
    description = "allow http access to our ALB"
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {        
        from_port = 8080
        to_port = 8080
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
}
<<<<<<< HEAD

=======
}
>>>>>>> e6b670cfc00653187ea06a625d15142fb770735d
resource "aws_security_group" "rain-ecs-sg" {
    name = "rain-ecs-sg"
    description = "allow http access from our ALB to ecs cluster"
    ingress {
        from_port = 8081
        to_port = 8081
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 8082
        to_port = 8082
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 8083
        to_port = 8083
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 8084
        to_port = 8084
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 8085
        to_port = 8085
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 8086
        to_port = 8086
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 8087
        to_port = 8087
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 8088
        to_port = 8088
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
<<<<<<< HEAD
    }
=======
    }
}
>>>>>>> e6b670cfc00653187ea06a625d15142fb770735d
